# megalock

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
contrib/: megalock
src/: animation.rs  lib.rs  macros.rs  main.rs  screen.rs  screen_drawer.rs  types.rs  utils.rs
src/wm/: mod.rs  pam.rs  statics.rs
src/x11/: connection.rs  consts.rs  mod.rs  statics.rs
